# waytogocoop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/moire-core/: Cargo.toml
crates/moire-core/src/: colormap.rs  density.rs  fft.rs  isotope_effects.rs  isotopes.rs  lattice.rs  lib.rs  magnetic.rs  materials.rs  moire.rs  topological.rs
crates/moire-desktop/: Cargo.toml
crates/moire-desktop/src/: app.rs  lib.rs  main.rs
crates/moire-desktop/src/render/: axes.rs  mod.rs  overlay.rs  pattern.rs  renderer3d.rs  screenshot.rs  surface3d.rs
crates/moire-desktop/src/render/gpu/: camera.rs  mesh.rs  mod.rs  pipeline.rs  readback.rs
crates/moire-desktop/src/render/gpu/shaders/: surface.wgsl  volume.wgsl
crates/moire-desktop/src/ui/: about.rs  info_panel.rs  isotope_panel.rs  magnetic_panel.rs  menu.rs  mod.rs  sidebar.rs  viewport.rs
docs/images/: README.md
scripts/: capture_screenshots.py
src/waytogocoop/: app.py  config.py  state.py
src/waytogocoop/assets/: app.css  style.css
src/waytogocoop/components/: colormaps.py  colormaps_data.json  controls.py  figure_factory.py  isotope_panel.py  magnetic_panel.py  material_selector.py  parameter_panel.py
src/waytogocoop/computation/: fourier.py  isotope_effects.py  magnetic.py  moire.py  superconducting.py  topological.py
src/waytogocoop/materials/: __init__.py  database.py  isotopes.py  lattice.py
src/waytogocoop/pages/: fourier_analysis.py  home.py  magnetic_field.py  moire_viewer.py  parameter_sweep.py  phase_diagram.py  proximity_3d.py  substrate_comparison.py
tests/: conftest.py  test_fourier.py  test_isotopes.py  test_magnetic.py  test_materials.py  test_moire.py  test_superconducting.py  test_topological.py  test_topological_3d.py
