[project]
name = "waytogocoop"
version = "0.1.0"
description = "Moire Engineering of Cooper-Pair Density Modulation States — Visualization Tool"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.24",
    "numpy>=1.26",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.scripts]
waytogocoop = "waytogocoop.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
