[project]
name = "waytogocoop"
version = "0.1.0"
description = "Moire Engineering of Cooper-Pair Density Modulation States — Visualization Tool"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.24",
    "numpy>=1.26",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.scripts]
waytogocoop = "waytogocoop.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "SIM108",  # ternary operator — if/else is clearer for numpy array operations
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "speculative: marks tests for speculative physics modules",
]

[tool.coverage.run]
source = ["src/waytogocoop"]
omit = ["src/waytogocoop/pages/*", "src/waytogocoop/components/*", "src/waytogocoop/app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
